# hybrid-routing-agents-framework

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  eval_set.json  main.py  package-lock.json  pyproject.toml  requirements.txt
agents/: advanced_verifier.py  domain_classifier.py  inference.py  inference_agent.py  prompts.py  scorer.py  verifier_agent.py
api/: Dockerfile.txt  server.py
db/: client.py  hyra_backup.dump
db/dumps/: 1126_hyra_backup.dump  hyra_backup.dump
docs/: VLLM.md  db-schema.md  gcp-mysql-connection.md  ollama.md  results.txt
evaluation/: benchmark.py  eval_set.json  evaluator.py  prompts.py  requirements.txt  results.json
front/: index.html  package-lock.json  package.json
front/src/: App.css  App.tsx  index.css
front/src/components/: ChatWindow.tsx  LogsPanel.tsx
frontend/: package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatMessage.tsx  ChatWindow.tsx  Sidebar.tsx
langfuse/: __init__.py  tracer.py
langfuse_config/: tracer.py
registry/: model_registry.py
server/: server.py  test-db.py  test-server-response.py
utils/gemini/: client.py
utils/router/: config.py  config.yaml  router.py
