[project]
name = "hybrid-routing-agents-framework"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.118.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.12.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
    "torch>=2.3.0",
    "transformers>=4.42.0",
    "vllm>=0.5.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.1.0",
    "pytest>=8.4.2",
]
